--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "reveal.js": "^3.8.0"
     },
     "scripts": {
-        "build": "gatsby build --prefix-paths",
+        "build": "gatsby build",
         "dev": "gatsby develop",
         "lint": "eslint **",
         "clear": "rm -rf .cache",
