--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "gatsby-transformer-remark": "^2.2.5",
         "gatsby-transformer-sharp": "^2.1.17",
         "juniper-js": "^0.1.0",
+        "lottie-web": "^5.8.1",
         "node-sass": "^4.11.0",
         "prismjs": "^1.26.0",
         "react": "^16.8.2",
