--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "codemirror": "^5.65.0",
         "gatsby": "^2.1.4",
         "gatsby-image": "^2.0.29",
+        "gatsby-plugin-google-analytics": "^4.10.0",
+        "gatsby-plugin-google-gtag": "^4.10.0",
         "gatsby-plugin-manifest": "^2.0.17",
         "gatsby-plugin-offline": "^2.0.23",
         "gatsby-plugin-react-helmet": "^3.0.6",
@@ -32,7 +34,7 @@
         "juniper-js": "^0.1.0",
         "lottie-web": "^5.8.1",
         "node-sass": "^4.11.0",
-        "prismjs": "^1.26.0",
+        "prismjs": "^1.27.0",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
         "react-helmet": "^5.2.0",
